update: get /tags
